tests/snapshots/replay__bug_bash_summarization_uses_tools.snap
---
source: tests/e2e_bug_bash_snapshots.rs
assertion_line: 44
---
response_count: 1
has_final_response: true
tool_calls:
  - name: echo
    success: true
events:
  - kind: thinking
    message: processing...
  - kind: thinking
    message: thinking (step 1)...
  - kind: other
    variant: Other
  - kind: thinking
    message: running echo...
  - kind: tool_started
    name: echo
  - kind: tool_completed
    name: echo
    success: true
    error: ~
  - kind: tool_result_preview
    name: echo
    preview_len_bucket: 0
  - kind: other
    variant: Other
  - kind: thinking
    message: thinking (step 2)...
  - kind: other
    variant: Other
  - kind: other
    variant: Other
  - kind: status
    message: done
event_kind_counts:
  Other: 4
  Status: 1
  Thinking: 4
  ToolCompleted: 1
  ToolResult: 1
  ToolStarted: 1
llm_call_count: 2
safety_warning_count: 0
engine_threads: []
