tests/snapshots/replay__milestone0_blackbox_multi_step_task_still_completes_all_steps.snap
---
source: tests/e2e_engine_v2_milestone0_blackbox.rs
---
scenario_id: multi_step_task_still_completes_all_steps
response_count: 1
has_final_response: true
turn_count: 1
llm_calls: 3
tool_calls_total: 2
tool_calls_failed: 0
duplicate_tool_calls: 1
max_failed_tool_streak: 0
final_state: Done
tool_sequence:
  - echo
  - echo
