tests/snapshots/replay__milestone0_blackbox_simple_task_finishes_without_extra_exploration.snap
---
source: tests/e2e_engine_v2_milestone0_blackbox.rs
---
scenario_id: simple_task_finishes_without_extra_exploration
response_count: 1
has_final_response: true
turn_count: 1
llm_calls: 2
tool_calls_total: 1
tool_calls_failed: 0
duplicate_tool_calls: 0
max_failed_tool_streak: 0
final_state: Done
tool_sequence:
  - echo
