tests/snapshots/replay__milestone0_local_execution_bias_punctuation_repo_scan.snap
---
source: tests/e2e_engine_v2_milestone0.rs
---
scenario_id: local_execution_bias_punctuation_repo_scan
response_count: 1
has_final_response: true
turn_count: 1
llm_calls: 2
tool_calls_total: 1
tool_calls_failed: 0
duplicate_tool_calls: 0
max_failed_tool_streak: 0
hit_iteration_limit: false
safety_warning_count: 0
saw_finalization_hint: true
saw_no_new_evidence_hint: false
saw_repeated_error_nudge: false
saw_local_execution_bias_hint: true
tool_sequence:
  - echo
engine_threads:
  - final_state: Done
    step_count: 2
    action_failed_events: 0
    code_execution_failed_events: 0
    approval_requested_events: 0
    issue_categories:
      - mixed_mode
